# uniset2

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  aclocal.m4  autogen-clang.sh  autogen.sh  conanfile.py  config.h.in  configure  configure.ac  cvs2cl.pl  include.mk.in  libUniSet.include  libUniSet.pc.in  libUniSet2.include  libUniSet2.pc.in  libtool  ltmain.sh  uniset2.files  uniset2.includes
IDL/: Makefile.am  Makefile.in  idl.mk.in
IDL/Processes/: IOController_i.idl  Makefile.am  Makefile.in  UniSetObserver_i.idl
IDL/Services/: DBServer_i.idl  InfoServer_i.idl  Makefile.am  Makefile.in  NetService_i.idl  RepositoryAgent_i.idl  TimerService_i.idl
IDL/UniSetTypes/: Makefile.am  Makefile.in  ObjectsManager_i.idl  UniSetBaseConstants.idl.in  UniSetManager_i.idl  UniSetObject_i.idl  UniSetTypes_i.idl
Utilities/: Makefile.am  Makefile.in
Utilities/Admin/: Makefile.am  Makefile.in  admin.cc  admin.sh  create_links.sh  uniset2-vmonit
Utilities/DBServer-MySQL/: DBInterface.cc  DBInterface.h  DBServer_MySQL.cc  DBServer_MySQL.h  Makefile.am  Makefile.in  db_create.sql  db_rotate.sql  main.cc  start_fg.sh
Utilities/InfoServer/: Makefile.am  Makefile.in  main.cc
Utilities/JrnTests/: JrnTest.cc  Jrntest.cc  Makefile.am  Makefile.in
Utilities/MBTester/: MBSlave.cc  MBSlave.h  MBTCPServer.cc  MBTCPServer.h  Makefile.am  Makefile.in  mbrtuslave.cc  mbrtutester.cc  mbslave.cc  mbtcpconnection.cc  mbtcpserver.cc  mbtcptester.cc
Utilities/NullController/: Makefile.am  Makefile.in  NullController.cc  NullController.h  main.cc  start_fg.sh  stop.sh
Utilities/SImitator/: Makefile.am  main.cc  start_fg.sh  uniset2-functions.sh  uniset2-start.sh
Utilities/SMonit/: Makefile.am  Makefile.in  event.sh  smonitor.cc  start_fg.sh  stop.sh
Utilities/SViewer-text/: Makefile.am  Makefile.in  main.cc  start_fg.sh
Utilities/ULog/: Makefile.am  log-stdin.cc  log-wrap.cc  log.cc  log2val.cc  logserver.cc  test_child.sh
Utilities/UniXmlTest/: XmlTest.cc
Utilities/codegen/: Makefile.am  Makefile.in  ctl-cpp-cc-alone-ask.xsl  ctl-cpp-cc-alone.xsl  ctl-cpp-cc-ask.xsl  ctl-cpp-cc.xsl  ctl-cpp-common.xsl  ctl-cpp-h-alone.xsl  ctl-cpp-h.xsl  ctl-cpp-main-alone.xsl  ctl-cpp-main.xsl  skel-Makefile.am  skel-main.cc  skel.cc  skel.h  skel.src.xml  uniset-codegen.in  uniset2-codegen.in
Utilities/scripts/: Makefile.am  Makefile.in  catch-test-run.sh  uniset-functions.sh  uniset-start.sh  uniset-stop.sh  uniset2-functions.sh  uniset2-start.sh  uniset2-stop.sh
contrib/: Makefile.am
contrib/cityhash102/: Makefile.am
contrib/libfarmhash/: Makefile.am
contrib/murmurhash/: Makefile.am
docs/: Makefile.am  Makefile.in  UniSetDox.cfg.in  UniSetDoxDevel.cfg.in
docs/Describes/: overview_ru.lyx
docs/DocPages/: Concept.dox  Configuration.dox  ControlProcess.dox  Debug.dox  IOConfigure.dox  MutexPage.dox  NotifyController.dox  ObjectRepository.dox  ObjectsMap.dox  REST_API.dox  Services.dox  UniSetLibStyle.dox  UniversalInterface.dox  commitpage.dox  commonpage.dox  depends.dox  freezeValue.md  libuniset.dox  mainpage.dox  python.dox  python.md  todo.dox  uniset-codegen-go.dox  uniset-codegen.dox
docs/adr/: ADR-0001-st2js-python-blark.md
docs/design/: jscript-debug-visualizer-design.md  st2js-converter-design.md
docs/examples/: uniset-configure-example.xml
docs/html/: description.txt
docs/plans/: 20260404-st2js-converter.md  20260405-jscript-debug-visualizer.md
extensions/: Makefile.am  Makefile.in  libUniSet2Extensions.pc.in  libUniSetExtensions.pc.in
extensions/Backend-ClickHouse/: BackendClickHouse.cc  BackendClickHouse.h  ClickHouseInterface.cc  ClickHouseInterface.h  ClickHouseTagsConfig.cc  ClickHouseTagsConfig.h  Makefile.am  docker-compose.yml  helper.cc  libUniSet2BackendClickHouse.pc.in  main.cc  start_fg.sh  stop.sh  tables.sql  test.cc  uniset2-clickhouse-admin.in
extensions/Backend-OpenTSDB/: BackendOpenTSDB.cc  BackendOpenTSDB.h  Makefile.am  libUniSet2BackendOpenTSDB.pc.in  main.cc  start_fg.sh
extensions/DBServer-MySQL/: DBInterface.cc  DBInterface.h  DBServer_MySQL.cc  DBServer_MySQL.h  Makefile.am  MySQLInterface.cc  MySQLInterface.h  create_links.sh  db_create.sql  db_rotate.sql  libUniSet2MySQL.pc.in  libUniSetMySQL.pc.in  main.cc  start_fg.sh  test.cc
extensions/DBServer-PostgreSQL/: DBServer_PostgreSQL.cc  DBServer_PostgreSQL.h  Makefile.am  PostgreSQLInterface.cc  PostgreSQLInterface.h  (+5 more)
extentions/: Makefile.am  Makefile.in  libUniSetExtentions.pc.in
include/: AccessConfig.h  AccessMask.h  CallBackTimer.h  CallBackTimer.tcc  CallBackTimer_template.h  CallbackTimer.h  CallbackTimer.tcc  ComPort.h  ComPort485F.h  CommonEventLoop.h  Configuration.h  DBInterface.h  DBLogSugar.h  DBServer.h  Debug.h  DebugStream.h  DefaultEventLoop.h  DefaultMessageInterface.h  DelayTimer.h  EventLoopServer.h  Exceptions.h  HourGlass.h  IOConfig.h  IOConfig_XML.h  IOController.h  IONotifyController.h  IONotifyController_LT.h  IORFile.h  ISRestorer.h  InfoServer.h  Jrn.h  LT_Object.h  LogAgregator.h  LogReader.h  LogServer.h  LogServerTypes.h  LogSession.h  MQAtomic.h  MQMutex.h  Makefile.am  (+76 more)
lib/: Makefile.am  Makefile.in
src/: Makefile.am  Makefile.in
tests/: Makefile.am  TestUObject.h  at-test-launch.sh  calibration.cc  callbacktimer.cc  conftest.cc  conftest.sh  const_char.cc  create_links.sh  delaytimer.cc  develop.cc  dlog.cc  getline.cc  hourglass.cc  int_unsigned.cc  iorfile.cc  iterator_test.cc  iterator_test.xml  messagetype.cc  modbustypes.cc  passivetimer.cc  perf_test.cc  perf_test.sh  pulse.cc  sscanf_hex.cc  stop.sh  test.xml  testID.xml  test_accessconfig.cc  test_accessmask.cc  test_callbacktimer.cc  test_conftest.cc  test_debugstream.cc  test_delaytimer.cc  test_dlog.cc  test_hourglass.cc  test_ioconfig_xml.cc  test_iocontroller_types.cc  test_iorfile.cc  test_logserver.cc  (+49 more)
testsuite/: Makefile.am  at-test-launch.sh  basic-tests.at  testcoverage-common.mk.in  testsuite-common.mk  testsuite-common.mk.in  testsuite-coverage-common.mk  testsuite.at  uniset2-functions.sh  valgrind.common.supp
(+1273 files in other folders)
